add some tx endpoints

--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "koios-pluts",
   "version": "0.1.0",
-  "description": "A Koios API wrapper based on plu-ts",
+  "description": "A Koios API wrapper based on plu-ts types",
   "main": "dist/index.js",
   "scripts": {
-    "test": "test"
   },
   "repository": {
     "type": "git",
