--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "description": "A Koios API wrapper based on plu-ts types",
   "main": "dist/index.js",
+  "type": "commonjs",
+  "files": [
+    "dist"
+  ],
   "scripts": {
+    "build": "tsc --project ./tsconfig.json && tsc-alias -p ./tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -19,6 +24,7 @@
   },
   "homepage": "https://github.com/HarmonicLabs/koios-pluts#readme",
   "dependencies": {
-    "@harmoniclabs/plu-ts": "^0.2.0-dev27"
+    "@harmoniclabs/plu-ts": "^0.2.0",
+    "@harmoniclabs/uint8array-utils": "^1.0.0"
   }
 }
