--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@harmoniclabs/koios-pluts",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A Koios API wrapper based on plu-ts types",
   "main": "dist/index.js",
   "type": "commonjs",
@@ -8,7 +8,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc --project ./tsconfig.json && tsc-alias -p ./tsconfig.json"
+    "build": "tsc --project ./tsconfig.json && tsc-alias -p ./tsconfig.json",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,16 @@
   },
   "homepage": "https://github.com/HarmonicLabs/koios-pluts#readme",
   "dependencies": {
-    "@harmoniclabs/plu-ts": "^0.2.0",
+    "@harmoniclabs/plu-ts": "^0.2.1",
     "@harmoniclabs/uint8array-utils": "^1.0.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^28.1.4",
+    "@types/node": "^18.14.6",
+    "jest": "^29.4.3",
+    "tsc-alias": "^1.7.1",
+    "typescript": "^4.6.3"
   }
 }
