--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@harmoniclabs/koios-pluts",
-  "version": "0.1.2",
+  "version": "0.1.3-dev1",
   "description": "A Koios API wrapper based on plu-ts types",
   "main": "dist/index.js",
   "type": "commonjs",
@@ -25,8 +25,10 @@
   },
   "homepage": "https://github.com/HarmonicLabs/koios-pluts#readme",
   "dependencies": {
-    "@harmoniclabs/plu-ts": "^0.2.1",
     "@harmoniclabs/uint8array-utils": "^1.0.0"
+  },
+  "peerDependencies": {
+    "@harmoniclabs/plu-ts": "^0.3.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.18.6",
