--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@harmoniclabs/koios-pluts",
-  "version": "0.1.3-dev1",
+  "version": "0.1.4-dev0",
   "description": "A Koios API wrapper based on plu-ts types",
   "main": "dist/index.js",
   "type": "commonjs",
@@ -25,10 +25,8 @@
   },
   "homepage": "https://github.com/HarmonicLabs/koios-pluts#readme",
   "dependencies": {
-    "@harmoniclabs/uint8array-utils": "^1.0.0"
-  },
-  "peerDependencies": {
-    "@harmoniclabs/plu-ts": "^0.3.0"
+    "@harmoniclabs/uint8array-utils": "^1.0.0",
+    "@harmoniclabs/plu-ts": "^0.4.0-dev3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.18.6",
